--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,32 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <script src="plugins/jquery/jquery-3.3.1.min.js"></script>
         <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
         <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+        <script src="https://code.highcharts.com/highcharts.src.js"></script>
         <script src="javascript/functions.js"></script>
         <link rel="stylesheet" href="css/layout.css">
     </head>
     <body>
-        <object type="text/html" data="html/layout.html"></object>
+        <div class="jumbotron">
+                <div class="container">
+                <div class="row" id="buttonsRow">
+                        <div class="col-md-1"></div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary">Dollar</button>
+                    </div>
+                    <div class="col-md-2 margin-left">
+                            <button type="button" class="btn btn-primary">Euro</button>
+                    </div>
+                    <div class="col-md-2 margin-left">
+                            <button type="button" class="btn btn-primary">Peso Argentino</button>
+                    </div>
+                </div>
+                <div class="row" id="graphRow">
+                    <div id="graph"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
