--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
         <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
         <script src="https://code.highcharts.com/highcharts.src.js"></script>
-        <script src="javascript/functions.js"></script>
         <link rel="stylesheet" href="css/layout.css">
     </head>
     <body>
@@ -14,7 +13,7 @@
                 <div class="row" id="buttonsRow">
                         <div class="col-md-1"></div>
                     <div class="col-md-2">
-                        <button type="button" class="btn btn-primary">Dollar</button>
+                        <button type="button" class="btn btn-primary" id="dollar">Dollar</button>
                     </div>
                     <div class="col-md-2 margin-left">
                             <button type="button" class="btn btn-primary">Euro</button>
@@ -30,3 +29,5 @@
         </div>
     </body>
 </html>
+
+<script src="javascript/functions.js"></script>
