Fazendo os requests
Inserindo os requests para a API, formatando o retorno e montando o grafico de acordo com os dados enviados.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,13 +13,13 @@
                 <div class="row" id="buttonsRow">
                         <div class="col-md-1"></div>
                     <div class="col-md-2">
-                        <button type="button" class="btn btn-primary" id="dollar">Dollar</button>
+                        <button type="button" class="btn btn-primary buttonCoin" id="USD">Dollar</button>
                     </div>
                     <div class="col-md-2 margin-left">
-                            <button type="button" class="btn btn-primary">Euro</button>
+                            <button type="button" class="btn btn-primary buttonCoin" id="EUR">Euro</button>
                     </div>
                     <div class="col-md-2 margin-left">
-                            <button type="button" class="btn btn-primary">Peso Argentino</button>
+                            <button type="button" class="btn btn-primary buttonCoin" id="ARS">Peso Argentino</button>
                     </div>
                 </div>
                 <div class="row" id="graphRow">
