Separando o arquivo do servidor e inserindo variavel de ambiente como key da api

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,9 @@
                             <button type="button" class="btn btn-primary buttonCoin" id="ARS">Peso Argentino</button>
                     </div>
                 </div>
+                <div class="row">
+                    <input class="form-control" id="x" type="text">
+                </div>
                 <div class="row" id="graphRow">
                     <div id="graph"></div>
                 </div>
